Services, Load Balancing and Networking/ingress-controller/aws-load-balancer-controller/manifests/1.ingress-single-rule.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:077210449609:certificate/a87b0943-9fn1-873j-09904577nef2
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
    alb.ingress.kubernetes.io/healthcheck-path: /health-check
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/security-groups: testing-alb
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    kubernetes.io/ingress.class: alb
  name: basic-ingress-with-single-rule
  namespace: testing-ingress
spec:
  rules:
  - host: basic-ingress-with-single-rule.testingdomain.com
    http:
      paths:
      - backend:
          service:
            name: testing-service
            port:
              number: 8080
        path: /*
        pathType: ImplementationSpecific
